🐛 Fix body link icon spacing

--- a/assets/sass/components/_link.sass
+++ b/assets/sass/components/_link.sass
@@ -23,6 +23,11 @@
     .icon
       margin-left: 8px
 
+  &.body
+
+    .icon
+      margin-left: 8px
+
   &.dark
 
     p
